# sl-disability-form

./: .gitignore  Dockerfile  README.md  context.txt  key_mappings.py  main.py  member-details.json  pdffill.py  provider-details.json  pyproject.toml  requirements.txt  temp.py  vercel.json
api/: context.txt  key_mappings.py  llmoperations.py  main.py  member-details.json  provider-details.json
api/input-forms/: page14.json
api/static/styles/: script.js  styles.css
api/templates/: index.html  script.js  styles.css
static/: index.html
